syntax = "proto3";

import "Protos/base.proto";
import "Protos/recurso.proto";
import "Protos/projeto.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.RecursoProjetoProto";

package recursoProjeto;

service RecursoProjetoProto {

	rpc Incluir (RecursoProjetoModel) returns (RecursoProjetoModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (RecursoProjetoModel);
	rpc Alterar (RecursoProjetoModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc ListarPorProjeto (base.BaseRequest) returns (ListarPorProjetoReply);
}

message RecursoProjetoModel {

	string Id = 1;
	string IdRecurso = 2;
	string IdProjeto = 3;
	string DataInclusao = 4;
	recurso.RecursoModel Recurso = 5;
	projeto.ProjetoModel Projeto = 6;
}

message ListarReply {

    repeated RecursoProjetoModel Lista = 1;
}

message ListarPorProjetoReply {

    repeated RecursoProjetoModel Lista = 1;
}